# todo-cli

./: .gitignore  README.md  build.sh  main.py  pyproject.toml
app/commands/: add_todo.py  delete_todo.py  edit_todo.py  hello.py  list_todos.py
app/controllers/: json.py
app/models/: todo.py
cli/: __init__.py  cli.py
core/models/: __init__.py  todo.py
core/services/: __init__.py  todo_service.py
core/storage/: __init__.py  repository.py
tui/: __init__.py  tui.py
tui/components/: __init__.py  header.py
tui/screens/: __init__.py  entry.py
