[project]
name = "todo-cli"
version = "1.0.0"
description = "A click application for task tracking"
authors = [
    {name = "mek0124", email = "mek0124@proton.me"},
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["address-book", "contacts", "desktop", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "PySide6>=6.5.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mek0124/address-book"
Repository = "https://github.com/mek0124/address-book"
Issues = "https://github.com/mek0124/address-book/issues"

[project.scripts]
address-book = "main:main"

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "main*"]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.ui"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --color=yes"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]